--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "sharp": "^0.34.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
